--- a/src/css/input.css
+++ b/src/css/input.css
@@ -25,3 +25,44 @@ body {
     backdrop-filter: blur(5px);
     box-shadow: inset 0 -1px 0 0 rgba(0,0,0,0.1)
 }
+
+.label-form{
+    @apply text-base font-bold text-primary
+}
+
+.custom-form{
+    @apply w-full rounded-lg bg-slate-200
+    text-dark p-3 focus:outline-none focus:ring-primary 
+    focus:ring-1 focus:border-primary
+}
+
+.link {
+    @apply text-base text-dark py-2 mx-8 flex
+    group-hover:text-primary
+}
+
+.card-portofolio {
+    @apply mb-20 p-4 md:w-1/2
+}
+
+.card-portofolio-container{
+    @apply rounded-xl shadow-md overflow-hidden
+}
+
+.card-portofolio-title {
+    @apply font-semibold text-xl text-dark mt-5 mb-3 hover:text-primary
+}
+
+.card-portofolio-description {
+    @apply font-medium text-base text-secondary
+}
+
+.icon-social-media {
+    @apply w-9 h-9 mr-3 
+    rounded-full flex justify-center 
+    items-center border border-slate-300 hover:bg-primary hover:text-white text-slate-300
+}
+
+.footer-menu-label {
+    @apply inline-block text-base hover:text-primary mb-3
+}
